--- a/FlippPartner.html
+++ b/FlippPartner.html
@@ -199,7 +199,7 @@
             <footer class="slide-footer"></footer>
         </section>con
 
-        <!-- Slide 3: How to Make the Flyer More Relevant? -->
+        <!-- Slide 4: How to Make the Flyer More Relevant? -->
         <section id="slide-3" class="slide">
              <header class="slide-header">
                 <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                     <div>
-                        <img id="persona-image" src="https://placehold.co/600x450/a7f3d0/1e293b?text=Healthy+Eater+Flyer" alt="Dynamic Flyer Concept" class="rounded-lg shadow-lg transition-all duration-300">
+                        <img id="persona-image" src="healthyeater.png" alt="Dynamic Flyer Concept" class="rounded-lg shadow-lg transition-all duration-300">
                         <p class="text-center mt-2 text-sm text-gray-500">Concept: Different users see different hero products.</p>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
             <footer class="slide-footer"></footer>
         </section>
 
-        <!-- Slide 4: Technical Solution -->
+        <!-- Slide 6: Technical Solution -->
         <section id="slide-4" class="slide">
             <header class="slide-header">
                 <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
@@ -276,7 +276,7 @@
             <footer class="slide-footer"></footer>
         </section>
 
-        <!-- Slide 6: Ensuring Right Flyer to Right User -->
+        <!-- Slide 7: Ensuring Right Flyer to Right User -->
         <section id="slide-6" class="slide">
             <header class="slide-header">
                 <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
@@ -292,7 +292,7 @@
             <footer class="slide-footer"></footer>
         </section>
 
-        <!-- Slide 7: Retailer Requirements -->
+        <!-- Slide 8: Retailer Requirements -->
         <section id="slide-7" class="slide">
             <header class="slide-header">
                 <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
@@ -300,7 +300,7 @@
             </header>
             <div class="slide-content">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">What We Need From You to Succeed</h2>
-                <p class="text-center text-lg text-gray-600 mb-12 max-w-3xl mx-auto">This is a partnership. To launch this innovative pilot, we'll need the following assets and collaboration from your team.</p>
+                <p class="text-center text-lg text-gray-600 mb-12 max-w-3xl mx-auto">To launch this innovative pilot, we'll need the following assets and collaboration from your team.</p>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="p-8 rounded-lg bg-gray-50 border"><h3 class="text-2xl font-bold mb-4">Technical Requirements</h3><ul class="list-disc list-inside space-y-3 text-lg"><li>Confirmation of DMP's ability to write key-value pairs to cookies.</li><li>Documentation of key-values for each audience segment.</li><li>Access to a technical lead for integration and testing.</li></ul></div>
                     <div class="p-8 rounded-lg bg-gray-50 border"><h3 class="text-2xl font-bold mb-4">Content & Asset Requirements</h3><ul class="list-disc list-inside space-y-3 text-lg"><li>Standard weekly flyer PDF and pricing data.</li><li>Defined audience segments (3-4 recommended for pilot).</li><li>Prioritized list of products/SKUs for each segment.</li><li>High-resolution creative assets for prioritized items.</li></ul></div>
@@ -308,8 +308,54 @@
             </div>
             <footer class="slide-footer"></footer>
         </section>
+        
+        <!-- Slide 9: Analytics (Revised) -->
+        <section id="slide-4" class="slide">
+            <header class="slide-header">
+                <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
+                <img src="Freshcart.png" alt="Grocer Logo" class="h-12">
+            </header>
+            <div class="slide-content">
+                <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">Projected Impact of Personalization</h2>
+                <p class="text-center text-lg text-gray-600 mb-12 max-w-4xl mx-auto">By personalizing the flyer, we can significantly lift key performance metrics. Here's a projection of the potential impact based on similar initiatives.</p>
+                <div class="w-full bg-gray-50 p-8 rounded-xl border">
+                    <div class="flex justify-around text-center h-64 border-b border-gray-300">
+                        <!-- Metric 1: Flyer Opens -->
+                        <div class="flex flex-col justify-end w-1/3">
+                            <div class="flex justify-center items-end space-x-2 h-full">
+                                <div class="w-12 bg-gray-300 rounded-t-lg relative animated-bar" style="height: 50%;"><span class="absolute -top-6 left-1/2 -translate-x-1/2 font-bold text-gray-600">100%</span></div>
+                                <div class="w-12 bg-gradient-to-t from-blue-400 to-blue-600 rounded-t-lg relative animated-bar" style="height: 60%; transition-delay: 100ms;"><span class="absolute -top-6 left-1/2 -translate-x-1/2 font-bold text-blue-800">+10%</span></div>
+                            </div>
+                            <p class="mt-4 font-semibold">Flyer Opens</p>
+                        </div>
+                        <!-- Metric 2: Engagements -->
+                        <div class="flex flex-col justify-end w-1/3">
+                            <div class="flex justify-center items-end space-x-2 h-full">
+                                <div class="w-12 bg-gray-300 rounded-t-lg relative animated-bar" style="height: 40%;"><span class="absolute -top-6 left-1/2 -translate-x-1/2 font-bold text-gray-600">100%</span></div>
+                                <div class="w-12 bg-gradient-to-t from-blue-400 to-blue-600 rounded-t-lg relative animated-bar" style="height: 55%; transition-delay: 200ms;"><span class="absolute -top-6 left-1/2 -translate-x-1/2 font-bold text-blue-800">+15%</span></div>
+                            </div>
+                            <p class="mt-4 font-semibold">Engagements</p>
+                        </div>
+                        <!-- Metric 3: Item Clicks -->
+                        <div class="flex flex-col justify-end w-1/3">
+                            <div class="flex justify-center items-end space-x-2 h-full">
+                                <div class="w-12 bg-gray-300 rounded-t-lg relative animated-bar" style="height: 30%;"><span class="absolute -top-6 left-1/2 -translate-x-1/2 font-bold text-gray-600">100%</span></div>
+                                <div class="w-12 bg-gradient-to-t from-blue-400 to-blue-600 rounded-t-lg relative animated-bar" style="height: 48%; transition-delay: 300ms;"><span class="absolute -top-6 left-1/2 -translate-x-1/2 font-bold text-blue-800">+18%</span></div>
+                            </div>
+                            <p class="mt-4 font-semibold">Item Clicks</p>
+                        </div>
+                    </div>
+                    <!-- Legend -->
+                    <div class="flex justify-center mt-6 space-x-6">
+                        <div class="flex items-center"><div class="w-4 h-4 bg-gray-300 rounded-sm mr-2"></div><span>Current Performance</span></div>
+                        <div class="flex items-center"><div class="w-4 h-4 bg-blue-500 rounded-sm mr-2"></div><span>Projected with Personalization</span></div>
+                    </div>
+                </div>
+            </div>
+            <footer class="slide-footer"></footer>
+        </section>
 
-        <!-- Slide 8: Pilot Goals & Measurement -->
+        <!-- Slide 10: Pilot Goals & Measurement -->
         <section id="slide-8" class="slide">
             <header class="slide-header">
                 <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
@@ -350,7 +396,7 @@
             <footer class="slide-footer"></footer>
         </section>
 
-        <!-- Slide 9: Next Steps -->
+        <!-- Slide 11: Next Steps -->
         <section id="slide-9" class="slide text-white">
              <header class="slide-header">
                 <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
@@ -371,7 +417,7 @@
             <footer class="slide-footer"></footer>
         </section>
 
-        <!-- Slide 10: Questions & Suggestions -->
+        <!-- Slide 12: Questions & Suggestions -->
         <section id="slide-10" class="slide">
             <header class="slide-header">
                 <img src="cropped-blue-1000.png" alt="Flipp Logo" class="h-12" class="h-6" style="filter: brightness(0) invert(1);">
